[package]
name = "gadb"
version = "0.1.0"
edition = "2021"
default-run = "gadb"

[dependencies]
copperline = "0.3.0"
extended = "0.1.0"
libc = "0.2.169"
nix = { version = "0.29.0" , features = ["fs", "personality", "process", "ptrace", "signal"] }
regex = "1.11.1"

[build-dependencies]
cc = "1.2.8"

[[bin]]
name = "quietwait"
path = "src/targets/quietwait.rs"

[[bin]]
name = "fastexit"
path = "src/targets/fastexit.rs"
